progress on parser

--- a/TODO
+++ b/TODO
@@ -1,14 +1,12 @@
-list diagnostics to terminal
---every= API finalize
 --every= parser
-Hook up logo to readme
+put into a folder
+list diagnostics to terminal
 Finalize 3 API commands
 Documentation
 Test suite
 Publish to PyPI
 TravisCI
 Remove fire
-Remove rich
 Color terminal output
 Add spinners?
 Send to newsletters + vwd
